--- a/ArjunaJTS/jts/application-component-2/pom.xml
+++ b/ArjunaJTS/jts/application-component-2/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.jts</groupId>
         <artifactId>jboss-as-jts-parent</artifactId>
-        <version>5.12.1.Final-SNAPSHOT</version>
+        <version>5.12.1.Final</version>
     </parent>
 
     <url>http://jboss.org/jbossas</url>
