--- a/compensating-transactions/pom.xml
+++ b/compensating-transactions/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>narayana-quickstarts-all</artifactId>
     <groupId>org.jboss.narayana.quickstart</groupId>
-    <version>5.12.1.Final-SNAPSHOT</version>
+    <version>5.12.1.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
   <artifactId>narayana-quickstarts-compensations</artifactId>
