--- a/rts/lra/hotel-service/pom.xml
+++ b/rts/lra/hotel-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
         <artifactId>lra-quickstarts</artifactId>
-        <version>5.12.1.Final-SNAPSHOT</version>
+        <version>5.12.1.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -24,7 +24,7 @@
 
         <version.wildfly-swarm>2017.8.1</version.wildfly-swarm>
         <version.resteasy-client>3.9.1.Final</version.resteasy-client>
-        <version.narayana>5.12.1.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.12.1.Final</version.narayana>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
