--- a/rts/at/service/service2/pom.xml
+++ b/rts/at/service/service2/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>service-quickstarts</artifactId>
-        <version>5.12.1.Final</version>
+        <version>5.12.2.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>service2</artifactId>
@@ -35,7 +35,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-        <version.narayana>5.12.1.Final</version.narayana>
+        <version.narayana>5.12.2.Final-SNAPSHOT</version.narayana>
     </properties>
 
     <repositories>
