--- a/rts/lra-examples/lra-jwt/wildfly/client/pom.xml
+++ b/rts/lra-examples/lra-jwt/wildfly/client/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
         <artifactId>examples-lra-jwt-wildfly</artifactId>
-        <version>5.12.1.Final</version>
+        <version>5.12.2.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>lra-client</artifactId>
