--- a/rts/lra/trip-controller/pom.xml
+++ b/rts/lra/trip-controller/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
         <artifactId>lra-quickstarts</artifactId>
-        <version>5.12.1.Final</version>
+        <version>5.12.2.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -23,7 +23,7 @@
         <service.http.port>${thorntail.http.port}</service.http.port>
 
         <version.resteasy-client>3.9.1.Final</version.resteasy-client>
-        <version.narayana>5.12.1.Final</version.narayana>
+        <version.narayana>5.12.2.Final-SNAPSHOT</version.narayana>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
