--- a/at/integration/pom.xml
+++ b/at/integration/pom.xml
@@ -63,12 +63,6 @@
       <version>${version.javax.ws.rs-api}</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jaxrs</artifactId>
-      <version>${version.org.jboss.resteasy}</version>
-      <scope>provided</scope>
-    </dependency>
 
     <dependency>
       <groupId>org.jboss.byteman</groupId>
@@ -92,16 +86,21 @@
     </dependency>
 
     <dependency>
-      <groupId>org.codehaus.jettison</groupId>
-      <artifactId>jettison</artifactId>
-      <version>${version.org.codehaus.jettison}</version>
-      <scope>provided</scope>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <version>${version.jakarta.json-api}</version>
+      <scope>test</scope>
     </dependency>
-
     <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-netty</artifactId>
-      <version>${version.org.jboss.resteasy}</version>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${version.fasterxml.jackson}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>${version.glassfish.json}</version>
       <scope>test</scope>
     </dependency>
 
@@ -128,10 +127,17 @@
 
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jettison-provider</artifactId>
+      <artifactId>resteasy-netty4</artifactId>
       <version>${version.org.jboss.resteasy}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-core-spi</artifactId>
+      <version>${version.org.jboss.resteasy}</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
