--- a/at/util/pom.xml
+++ b/at/util/pom.xml
@@ -67,7 +67,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jaxrs</artifactId>
+      <artifactId>resteasy-client-api</artifactId>
       <version>${version.org.jboss.resteasy}</version>
       <scope>provided</scope>
       <!-- filter out unwanted jars -->
