--- a/ArjunaJTA/object_store/pom.xml
+++ b/ArjunaJTA/object_store/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>artemis-journal</artifactId>
-      <version>1.5.5.jbossorg-008</version>
+      <version>2.18.0</version>
     </dependency>
   </dependencies>
 
