--- a/at/util-jakarta/pom.xml
+++ b/at/util-jakarta/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.12.2.Final-SNAPSHOT</version>
+    <version>5.12.2.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>restat-util-jakarta</artifactId>
