--- a/rts/at/pom.xml
+++ b/rts/at/pom.xml
@@ -72,7 +72,9 @@
     <module>simple</module>
     <module>service</module>
     <module>recovery</module>
+    <!-- see issue JBTM-3558
     <module>jta-service</module>
+    -->
     <module>undertow</module>
   </modules>
 </project>
