--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.jta</groupId>
   <artifactId>narayana-quickstarts-jta</artifactId>
-  <version>5.12.3.Final-SNAPSHOT</version>
+  <version>5.12.3.Final</version>
   <packaging>pom</packaging>
   <name>JBoss JTA Examples</name>
   <description>All quickstarts of JBoss JTA</description>
@@ -43,7 +43,7 @@
   </repositories>
   <properties>
     <version.surefire.plugin>2.19.1</version.surefire.plugin>
-    <version.narayana>5.12.3.Final-SNAPSHOT</version.narayana>
+    <version.narayana>5.12.3.Final</version.narayana>
     <version.junit>4.13.1</version.junit>
     <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
   </properties>
