Updated to 5.12.4.Final-SNAPSHOT

--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -15,12 +15,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>maven</artifactId>
-    <version>5.12.3.Final</version>
+    <version>5.12.4.Final-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>basic maven example</name>
     <description>basic maven example</description>
     <properties>
-      <version.narayana>5.12.3.Final</version.narayana>
+      <version.narayana>5.12.4.Final-SNAPSHOT</version.narayana>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
       <version.junit>4.13.1</version.junit>
