--- a/dbcp2-and-tomcat/pom.xml
+++ b/dbcp2-and-tomcat/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.narayana</groupId>
     <artifactId>dbcp2-and-tomcat</artifactId>
-    <version>5.12.4.Final</version>
+    <version>5.12.5.Final-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <properties>
