--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <version.microprofile.lra>1.0-RC1</version.microprofile.lra>
         <version.thorntail>2.4.0.Final</version.thorntail>
-        <version.jackson>[2.9.10.7,)</version.jackson>
+        <version.jackson>2.13.0</version.jackson>
     </properties>
 
     <repositories>
