--- a/pom.xml
+++ b/pom.xml
@@ -142,8 +142,8 @@
     <module>wildfly/commit-markable-resource</module>
     <module>STM</module>
     <module>jts-docker</module>
-    <!-- JBTM-2820 disable the osgi quickstart until the karaf release the 4.1.0-->
-    <module>karaf/osgi-jta</module>
+    <!-- JBTM-3565 disable the osgi quickstart until it is fixed -->
+    <!-- module>karaf/osgi-jta</module-->
     <module>jta-and-hibernate-standalone</module>
   </modules>
 
