--- a/rts/lra/flight-service/Dockerfile
+++ b/rts/lra/flight-service/Dockerfile
@@ -1,11 +1,11 @@
 FROM fabric8/java-jboss-openjdk8-jdk:1.2.3
 
-ENV JAVA_APP_JAR lra-test-swarm.jar
+ENV JAVA_APP_JAR quarkus-run.jar
 ENV AB_ENABLED off
 # to get more info about the service in console you can add switch
-# -Dswarm.logging=TRACE
+# -Dquarkus.log.level=TRACE
 ENV JAVA_OPTIONS -Xmx512m -Dlra.coordinator.url="http://flight-lra-coordinator:8080/lra-coordinator"
 
 EXPOSE 8080
 
-ADD target/lra-test-swarm.jar /deployments/
+ADD target/quarkus-app/quarkus-run.jar /deployments/
