--- a/rts/lra/flight-service/pom.xml
+++ b/rts/lra/flight-service/pom.xml
@@ -14,13 +14,12 @@
     <artifactId>flight-service</artifactId>
     <name>LRA Quickstart flight-service</name>
     <description>LRA Quickstart</description>
-    <packaging>war</packaging>
 
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <thorntail.http.port>8081</thorntail.http.port>
-        <lra.coordinator.url>http://localhost:8080/lra-coordinator</lra.coordinator.url>
-        <service.http.port>${thorntail.http.port}</service.http.port>
+        <quarkus.platform.version>1.12.2.Final</quarkus.platform.version>
+        <quarkus-plugin.version>1.12.2.Final</quarkus-plugin.version>
+        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 
         <version.narayana>${project.version}</version.narayana>
         <version.resteasy-client>4.5.7.Final</version.resteasy-client>
@@ -34,30 +33,42 @@
 
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-bom</artifactId>
+                <version>${quarkus.platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <finalName>lra-test</finalName>
         <plugins>
             <plugin>
-                <groupId>io.thorntail</groupId>
-                <artifactId>thorntail-maven-plugin</artifactId>
-                <version>${version.thorntail}</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <maven.home>${maven.home}</maven.home>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-maven-plugin</artifactId>
+                <version>${quarkus-plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>package</goal>
+                            <goal>build</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <environment>
-                        <thorntail.http.port>${thorntail.http.port}</thorntail.http.port>
-                    </environment>
-                    <properties>
-                        <lra.coordinator.url>${lra.coordinator.url}</lra.coordinator.url>
-                        <service.http.port>${service.http.port}</service.http.port>
-                        <thorntail.transactions.node-identifier>2</thorntail.transactions.node-identifier>
-                    </properties>
-                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -67,6 +78,11 @@
             <groupId>org.eclipse.microprofile.lra</groupId>
             <artifactId>microprofile-lra-api</artifactId>
             <version>${version.microprofile.lra}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy</artifactId>
         </dependency>
 
         <!-- JAX-RS -->
