--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -42,7 +42,8 @@
   </repositories>
   <modules>
     <module>at</module>
-    <module>lra</module>
+<!--    Disabling this quickstart, please check JBTM-3571 for more details-->
+<!--    <module>lra</module>-->
     <module>lra-examples</module>
   </modules>
 </project>
