Updated to 5.12.5.Final

--- a/ArjunaJTS/standalone/pom.xml
+++ b/ArjunaJTS/standalone/pom.xml
@@ -21,7 +21,7 @@
 
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>jts-standalone</artifactId>
-  <version>5.12.5.Final-SNAPSHOT</version>
+  <version>5.12.5.Final</version>
   <packaging>jar</packaging>
   <name>Standalone JTS Transaction Example</name>
   <description>Standalone JTS Transaction Example</description>
@@ -35,7 +35,7 @@
   </licenses>
 
   <properties>
-    <version.narayana>5.12.5.Final-SNAPSHOT</version.narayana>
+    <version.narayana>5.12.5.Final</version.narayana>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
