--- a/STM/optimistic/pom.xml
+++ b/STM/optimistic/pom.xml
@@ -16,10 +16,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.narayana.quickstart.stm</groupId>
 	<artifactId>optimistic</artifactId>
-	<version>5.12.5.Final</version>
+	<version>5.12.6.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
         <properties>
-			<version.narayana>5.12.5.Final</version.narayana>
+			<version.narayana>5.12.6.Final-SNAPSHOT</version.narayana>
 			<maven.compiler.source>1.8</maven.compiler.source>
 			<maven.compiler.target>1.8</maven.compiler.target>
         </properties>
