--- a/XTS/wsat-jta-multi_hop/pom.xml
+++ b/XTS/wsat-jta-multi_hop/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.xts</groupId>
         <artifactId>narayana-quickstarts-xts</artifactId>
-        <version>5.12.5.Final</version>
+        <version>5.12.6.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.txbridge.wsat-jta-multi_hop</groupId>
     <artifactId>wsat-jta-multi_hop-all</artifactId>
@@ -41,7 +41,7 @@
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.narayana>5.12.5.Final</version.narayana>
+        <version.narayana>5.12.6.Final-SNAPSHOT</version.narayana>
         <version.org.wildfly.arquillian>2.1.1.Final</version.org.wildfly.arquillian>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
         <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
