--- a/rts/lra-examples/cdi-embedded/pom.xml
+++ b/rts/lra-examples/cdi-embedded/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
-    <version>5.12.5.Final</version>
+    <version>5.12.6.Final-SNAPSHOT</version>
     <artifactId>examples-microprofile-lra-cdi-embedded</artifactId>
 
     <name>LRA Examples: LRA participant with embedded Coordinator</name>
