--- a/rts/lra-examples/lra-jwt/pom.xml
+++ b/rts/lra-examples/lra-jwt/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-jwt-examples</artifactId>
-    <version>5.12.5.Final</version>
+    <version>5.12.6.Final-SNAPSHOT</version>
     <name>LRA JWT Quickstart Examples</name>
     <description>Provides examples of how to secure LRA endpoints using JWT security mechanism.</description>
     <packaging>pom</packaging>
