--- a/rts/at/jta-service/jpa/pom.xml
+++ b/rts/at/jta-service/jpa/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>restat-bridge</artifactId>
-        <version>5.12.6.Final-SNAPSHOT</version>
+        <version>5.12.6.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -38,7 +38,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <version.narayana>5.12.6.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.12.6.Final</version.narayana>
         <version.jakarta.json-api>2.0.1</version.jakarta.json-api>
         <version.glassfish.json>1.1.4</version.glassfish.json>
     </properties>
