--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -19,14 +19,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>simple</artifactId>
-  <version>5.12.6.Final-SNAPSHOT</version>
+  <version>5.12.6.Final</version>
   <name>RESTAT Quickstart: Basic</name>
   <description>Basic example of how to start and stop a REST Atomic transaction</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-    <version.narayana>5.12.6.Final-SNAPSHOT</version.narayana>
+    <version.narayana>5.12.6.Final</version.narayana>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
