--- a/rts/lra/hotel-service/pom.xml
+++ b/rts/lra/hotel-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
         <artifactId>lra-quickstarts</artifactId>
-        <version>5.12.6.Final-SNAPSHOT</version>
+        <version>5.12.6.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -22,7 +22,7 @@
         <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 
         <version.resteasy-client>4.5.7.Final</version.resteasy-client>
-        <version.narayana>5.12.6.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.12.6.Final</version.narayana>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
