Updated to 5.12.7.Final-SNAPSHOT

--- a/ArjunaJTA/recovery/pom.xml
+++ b/ArjunaJTA/recovery/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>narayana-quickstarts-jta</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>Recovery example
