--- a/ArjunaCore/pom.xml
+++ b/ArjunaCore/pom.xml
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.arjunacore</groupId>
   <artifactId>narayana-quickstarts-core</artifactId>
-  <version>5.12.6.Final</version>
+  <version>5.12.7.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss Core Examples</name>
   <description>All quickstarts of JBoss Core</description>
