--- a/XTS/ssl/pom.xml
+++ b/XTS/ssl/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.xts</groupId>
     <artifactId>narayana-quickstarts-xts</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
