--- a/rts/at/pom.xml
+++ b/rts/at/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>rts-quickstarts</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>restat-quickstarts</artifactId>
