--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -19,14 +19,14 @@
 
     <groupId>org.jboss.narayana</groupId>
     <artifactId>rts-undertow-qs</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
 
     <name>Narayana Quickstarts: REST-AT with undertow</name>
     <description>Narayana: rest-at with undertow quickstart</description>
     <packaging>jar</packaging>
 
     <properties>
-        <version.narayana>5.12.6.Final</version.narayana>
+        <version.narayana>5.12.7.Final-SNAPSHOT</version.narayana>
         <version.jboss.logging>3.1.4.GA</version.jboss.logging>
         <undertow.io.version>2.1.6.Final</undertow.io.version>
         <version.resteasy>3.0.23.Final</version.resteasy>
