--- a/rts/lra-examples/pom.xml
+++ b/rts/lra-examples/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
   <artifactId>lra-examples</artifactId>
-  <version>5.12.6.Final</version>
+  <version>5.12.7.Final-SNAPSHOT</version>
   <name>LRA Quickstart Examples</name>
   <description>Provides examples of how to use transactions with microservices</description>
   <packaging>pom</packaging>
