--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-quickstarts</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
     <name>LRA Quickstarts</name>
     <description>Provides examples of how to use transactions with web applications</description>
     <packaging>pom</packaging>
