--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>narayana-quickstarts-jts</artifactId>
-  <version>5.12.7.Final</version>
+  <version>5.12.8.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JTS Examples</name>
   <description>All quickstarts of JTS</description>
@@ -43,7 +43,7 @@
   </repositories>
   <properties>
     <version.surefire.plugin>2.19.1</version.surefire.plugin>
-    <version.narayana>5.12.7.Final</version.narayana>
+    <version.narayana>5.12.8.Final-SNAPSHOT</version.narayana>
     <version.junit>4.13.1</version.junit>
     <version.transaction.api_1_1>1.0.0.Final</version.transaction.api_1_1>
   </properties>
